--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-lorem-ipsum": "1.4.10",
-    "react-router-dom": "6.3.0",
+    "react-router-dom": "^6.23.1",
     "react-scripts": "4.0.3"
   },
   "devDependencies": {
