--- a/package.json
+++ b/package.json
@@ -10,14 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "framer-motion": "^11.1.9",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-lorem-ipsum": "1.4.10",
-    "react-router-dom": "^6.23.1",
-    "react-scripts": "4.0.3"
+    "framer-motion": "^11.2.6",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "@eslint/compat": "^1.0.1",
+    "@eslint/js": "^9.3.0",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.2.1",
@@ -25,6 +24,8 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "globals": "^15.3.0",
+    "prettier": "^3.2.5",
     "vite": "^5.2.0"
   }
 }
