--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,16 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
+# dependencies
 dist
 dist-ssr
 *.local
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
 
 # Editor directories and files
 .vscode/*
@@ -22,3 +28,19 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+.env
+
+# production
+/src/components/PayPalButton
+
+# misc
+.DS_Store
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
