--- a/package.json
+++ b/package.json
@@ -3,14 +3,26 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "main": "server/server.js",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
+    "client-dev": "vite",
+    "server-dev": "nodemon server/server.js",
+    "start": "concurrently \"npm run client-dev\" \"npm run server-dev\"",
+    "prod": "npm run client-build && node server/server.js",
+    "client-build": "vite build",
+    "client-preview": "vite preview",
+    "format": "npx prettier --write **/*.{js,jsx,md}",
+    "format:check": "npx prettier --check **/*.{js,jsx,md}",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@paypal/paypal-js": "^8.1.0",
+    "@paypal/react-paypal-js": "^8.5.0",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "framer-motion": "^11.2.6",
+    "node-fetch": "^3.3.2",
     "popmotion": "^11.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -22,12 +34,15 @@
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.2.1",
+    "concurrently": "^8.2.1",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "globals": "^15.3.0",
+    "nodemon": "^3.1.3",
     "prettier": "^3.2.5",
+    "source-map-loader": "^1.0.0",
     "vite": "^5.2.0"
   }
 }
