--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@paypal/paypal-js": "^8.1.0",
     "@paypal/react-paypal-js": "^8.5.0",
+    "@react-spring/web": "^9.7.3",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "framer-motion": "^11.2.6",
@@ -26,7 +27,9 @@
     "popmotion": "^11.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.23.1"
+    "react-router-dom": "^6.23.1",
+    "react-scripts": "5.0.1",
+    "react-use-gesture": "^9.1.3"
   },
   "devDependencies": {
     "@eslint/compat": "^1.0.1",
