--- a/package.json
+++ b/package.json
@@ -1,28 +1,30 @@
+
 {
-  "name": "cnm-nutrisport",
+  "name": "boutique-cnm",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "main": "server/server.js",
-  "homepage": "http://cnm-nutrisport.com/",
-  "scripts": {
-    "client-dev": "vite",
-    "server-dev": "nodemon server/server.js",
-    "start": "concurrently \"npm run client-dev\" \"npm run server-dev\"",
-    "prod": "npm run client-build && node server/server.js",
-    "client-build": "vite build",
-    "client-preview": "vite preview",
-    "format": "npx prettier --write **/*.{js,jsx,md}",
-    "format:check": "npx prettier --check **/*.{js,jsx,md}",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
-  },
+"scripts": {
+  "client-dev": "vite",
+  "server-dev": "nodemon server/server.js",
+  "start": "concurrently \"npm run client-dev\" \"npm run server-dev\"",
+  "prod": "npm run client-build && node server/server.js",
+  "client-build": "vite build",
+  "client-preview": "vite preview",
+  "format": "npx prettier --write **/*.{js,jsx,md}",
+  "format:check": "npx prettier --check **/*.{js,jsx,md}",
+  "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+  "preview": "vite preview"
+  },  
   "dependencies": {
     "@paypal/paypal-js": "^8.1.0",
     "@paypal/react-paypal-js": "^8.5.0",
     "@react-spring/web": "^9.7.3",
+    "archiver": "^7.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-zip": "^3.0.0",
     "framer-motion": "^11.2.6",
     "node-fetch": "^3.3.2",
     "popmotion": "^11.0.5",
